force-app/main/default/objects/Brackets_UserMatchPred__c/Brackets_UserMatchPred__c.object-meta.xml
<CustomObject>
    <label>UserMatchPrediction</label>
    <nameField>
        <displayFormat>UMP-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserMatchPredictions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>