force-app/main/default/objects/Brackets_UserMatchPred__c/fields/Brackets_Match__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Match__c</fullName>
    <label>Match</label>
    <referenceTo>Brackets_Match__c</referenceTo>
    <relationshipLabel>UserMatchPredictions</relationshipLabel>
    <relationshipName>UserMatchPredictions</relationshipName>
    <type>Lookup</type>
</CustomField>