force-app/main/default/objects/Brackets_UserMatchPred__c/fields/Brackets_UserTournament__c.field-meta.xml
<CustomField>
    <fullName>Brackets_UserTournament__c</fullName>
    <label>UserTournament</label>
    <referenceTo>Brackets_UserTournament__c</referenceTo>
    <relationshipLabel>UserMatchPredictions</relationshipLabel>
    <relationshipName>UserMatchPredictions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>