force-app/main/default/objects/Brackets_UserMatchPred__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>