force-app/main/default/objects/Brackets_UserMatchPred__c/fields/PredictedWinnerBrackets_Team__c.field-meta.xml
<CustomField>
    <fullName>PredictedWinnerBrackets_Team__c</fullName>
    <label>PredictedWinnerTeam</label>
    <referenceTo>Brackets_Team__c</referenceTo>
    <relationshipLabel>UserMatchPredictions</relationshipLabel>
    <relationshipName>UserMatchPredictions</relationshipName>
    <type>Lookup</type>
</CustomField>